# CMSC502

assignment1/: .gitignore  CMakeLists.txt  functions.h  gen_cities.sh  main  main.cpp  makefile  mpi  mpi.cpp  plot_accuracies.m  plot_cities.m  plot_times.m  report.docx  run.sh  sequential  sequential.cpp  threaded  threaded.cpp  tmp.txt
assignment2/: CMakeLists.txt  functions.h  makefile  mpi.cpp  report.docx  run.sh  timing_test.sh
